[gd_scene load_steps=34 format=3 uid="uid://dh7lwrd6jqdep"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_1w0xd"]
[ext_resource type="PackedScene" uid="uid://dvberjv2fsl3s" path="res://scenes/character.tscn" id="1_82jgl"]
[ext_resource type="Texture2D" uid="uid://yieoc0r6y1m4" path="res://assets/Super Grotto Escape Files/Assets/Characters/Player/spritesheets/player-idle.png" id="2_xa7iq"]
[ext_resource type="Script" path="res://scripts/player/animated_sprite_2d.gd" id="3_h0a6v"]
[ext_resource type="Texture2D" uid="uid://cydnsk6xymx31" path="res://assets/Super Grotto Escape Files/Assets/Characters/Player/spritesheets/player-duck.png" id="3_sm6sh"]
[ext_resource type="Texture2D" uid="uid://dpwuih5udon20" path="res://assets/Super Grotto Escape Files/Assets/Characters/Player/spritesheets/player-jump.png" id="4_2w4yt"]
[ext_resource type="Texture2D" uid="uid://cart612wkg4y5" path="res://assets/Super Grotto Escape Files/Assets/Characters/Player/spritesheets/player-run.png" id="5_osmii"]
[ext_resource type="Texture2D" uid="uid://csjqa06rb4jxf" path="res://assets/Super Grotto Escape Files/Assets/Characters/Player/spritesheets/player-shoot.png" id="7_v8x8i"]
[ext_resource type="AudioStream" uid="uid://d36yw8naiuii2" path="res://assets/RPG_Essentials_Free/12_Player_Movement_SFX/30_Jump_03.wav" id="8_5p17m"]
[ext_resource type="AudioStream" uid="uid://br8srrohqm74w" path="res://assets/boing sound effect 1 (mp3cut.net).mp3" id="9_mpq2w"]
[ext_resource type="AudioStream" uid="uid://5vq18exo475h" path="res://assets/RPG_Essentials_Free/10_Battle_SFX/03_Claw_03.wav" id="10_ek2iw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kw7ln"]
atlas = ExtResource("3_sm6sh")
region = Rect2(32, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ax27"]
atlas = ExtResource("2_xa7iq")
region = Rect2(0, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_wteeq"]
atlas = ExtResource("2_xa7iq")
region = Rect2(32, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf0ku"]
atlas = ExtResource("2_xa7iq")
region = Rect2(64, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yn7l"]
atlas = ExtResource("2_xa7iq")
region = Rect2(96, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2as"]
atlas = ExtResource("2_xa7iq")
region = Rect2(128, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q8sf"]
atlas = ExtResource("2_xa7iq")
region = Rect2(160, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mjdf"]
atlas = ExtResource("4_2w4yt")
region = Rect2(0, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_losom"]
atlas = ExtResource("4_2w4yt")
region = Rect2(32, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl0gt"]
atlas = ExtResource("5_osmii")
region = Rect2(0, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsdap"]
atlas = ExtResource("5_osmii")
region = Rect2(32, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg2xp"]
atlas = ExtResource("5_osmii")
region = Rect2(64, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrr0u"]
atlas = ExtResource("5_osmii")
region = Rect2(96, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxrf6"]
atlas = ExtResource("5_osmii")
region = Rect2(128, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_776vw"]
atlas = ExtResource("5_osmii")
region = Rect2(160, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhkr6"]
atlas = ExtResource("7_v8x8i")
region = Rect2(3, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihhs8"]
atlas = ExtResource("7_v8x8i")
region = Rect2(34, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi3rp"]
atlas = ExtResource("7_v8x8i")
region = Rect2(65, 0, 31, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_xoxd8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw7ln")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ax27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wteeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf0ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yn7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q8sf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mjdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_losom")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl0gt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsdap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg2xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrr0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxrf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_776vw")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhkr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihhs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi3rp")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cx102"]
size = Vector2(14, 28)

[sub_resource type="Animation" id="Animation_iac7c"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ee2sd"]
_data = {
"idle": SubResource("Animation_iac7c")
}

[node name="Character" instance=ExtResource("1_82jgl")]
script = ExtResource("1_1w0xd")
health = 100
platformer_level = 0

[node name="Sprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_xoxd8")
animation = &"shoot"
autoplay = "idle"
frame_progress = 0.473891
script = ExtResource("3_h0a6v")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(1, 5)
shape = SubResource("RectangleShape2D_cx102")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_ee2sd")
}

[node name="JumpAudio" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource("8_5p17m")

[node name="TrampolineAudio" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource("9_mpq2w")

[node name="DeathAudio" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource("10_ek2iw")
